--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "Sample Theme",
+	"name": "ash",
 	"version": "1.0.0",
 	"minAppVersion": "1.0.0",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md"
+	"author": "jwafle",
+	"authorUrl": "https://github.com/jwafle/ash"
 }
